--- a/f22-06-325/notes/review_odes.ipynb
+++ b/f22-06-325/notes/review_odes.ipynb
@@ -119,7 +119,7 @@
     "id": "QctFd6OnWKfe"
    },
    "source": [
-    "The output of `solve_ip` is an object containing results in attributes on the object."
+    "The output of `solve_ivp` is an object containing results in attributes on the object."
    ]
   },
   {
